# StitchBot

./: .replit  README.md  pyproject.toml  replit.md
stitchbot/: __init__.py  bot.py  cli.py  config.py  rover.py
stitchbot/cogs/: __init__.py  core.py  verification.py
tests/: test_config.py  test_rover.py
